fix: cursor not being set to pointer in dark mode of users table

--- a/src/components/layout/UsersTable/styles.module.scss
+++ b/src/components/layout/UsersTable/styles.module.scss
@@ -1,5 +1,13 @@
 .usersTable {
   overflow-x: auto;
+
+  :global {
+    .ant-table-tbody {
+      .ant-table-row {
+        cursor: pointer;
+      }
+    }
+  }
 }
 
 .usersTableLight {
